# DAI-grpc-clients-cpp

./: CMakeLists.txt  README.md
behavior_recognition/: CMakeLists.txt  behavior_recognition_client.cpp  behavior_recognition_client.h
image_harmony/: image_harmony_client.cpp  image_harmony_client.h
target_detection/: CMakeLists.txt  target_detection_client.cpp  target_detection_client.h
target_tracking/: target_tracking_client.cpp  target_tracking_client.h
